
171010 Martin Mann :
 * README.md :
   + explicit seed description

171009 Martin Mann :
 * tests/*BasePair_test :
   * explicit use of std::abs (should fix test error of github issue #91)
   * BUGFIX: test values wrong (were derived from rounded values)
     -> fixes github issue #91 (thanks to @sjannielefevre) 
 * AccessibilityBasePair :
   * constructor() :
     + RT sanity check to avoid division by zero
 * NussinovHandler :
   + printMatrix() : utility function for debug to see matrix content
   * getQ(), getQb(), getPbp(), getPu() :
     * BUGFIX : boundary checks partially wrong
     + explicit lower bound handling
 + SeedHandlerMfe : former SeedHandler implementation for mfe-seed access
 * SeedHandler : now abstract interface
 * Predictor*Seed :
   * constructor() :
     * takes now directly a SeedHandler instance instead of a SeedConstraint
 * CommandLineParsing :
   + getSeedHandler() : provides the seed handler according to the user input
   * getPredictor() :
     * uses now getSeedHandler() to setup Predictor*Seed instances
   + '--seedTQ' argument for explicit seed encodings
 * SeedHandlerMfe() :
   * constructor() : sanity check in debug mode 
 + SeedHandlerExplicit() : seed handler for explicitly defined seed interactions
   + checkSeedEncoding() : tests sanity of seed encoding
   + SeedData() : data structure that parses and holds explicit seed information
 * SeedConstraint :
   + explicitSeeds + getter : explicit seed encodings to be used
 + tests/SeedHandlerExplicit :
   + test checkSeedEncoding()
   + test SeedData() parsing

171006 Martin Mann :
 * AccessibilityVrna :
   * fillByRNAup() :
     * BUGFIX : have to check whether region is blocked not if constrained
 * AccessibilityBasePair :
 * AccessibilityFromStream :
   + "not implemented" notification if accessibility constraints given

171005 Martin Mann :
 * configure.ac :
   + disable-log-coloring : sets INTARNA_LOG_COLORING for console log coloring
 * bin/IntaRNA :